--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ ul {
   max-width: 760px;
   margin: 68px auto 0 auto;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 40px;
 }
 
