--- a/styles/style.css
+++ b/styles/style.css
@@ -349,16 +349,16 @@ ul {
 }
 
 .footer__column_content_hours {
-  margin-right: 80px;
+  margin-left: auto;
 }
 
-/* .footer__column_content_social {
-} */
+.footer__column_content_social {
+  margin-left: 80px;
+}
 
 .footer__logo {
   width: 58px;
   height: 80px;
-  margin-right: auto;
 }
 
 .footer__column-heading {
