--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 ul {
   padding: 0;
   list-style-type: none;
@@ -45,6 +49,17 @@ ul {
   color: #000000;
   text-decoration: none;
   font-weight: bold;
+}
+
+.nav__link:focus-visible {
+  outline: 2px solid #c0c0c0;
+  outline-offset: 4px;
+}
+
+.nav__link:hover {
+  border-bottom: 1px solid;
+  background: #057bf2;
+  color: white;
 }
 
 .header__content {
@@ -381,6 +396,7 @@ ul {
   display: flex;
   column-gap: 10px;
   align-items: center;
+  color: white;
 }
 
 .footer__social-icon {
